2005-07-21  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark cairo_xlib_surface_create as complete. Move
	cairo_xlib_surface_set_drawable from 0.6 to 1.0 since it is an API
	addition, not a change.

2005-07-20  Carl Worth  <cworth@cworth.org>

	reviewed by: keithp

	* src/cairo.h (CAIRO_CONTENT_VALID): Fix macro to not consider
	CAIRO_FORMAT_ARGB32 (==0) as a valid cairo_content_t.

2005-07-20  Keith Packard  <keithp@keithp.com>

	reviewed by: otaylor

	* src/cairo-xlib-surface.c: (_cairo_xlib_surface_create_similar),
	(_cairo_xlib_surface_same_screen),
	(_cairo_xlib_surface_clone_similar), (_surfaces_compatible),
	(_categorize_composite_operation),
	(_cairo_xlib_surface_create_internal),
	(_cairo_xlib_screen_from_visual), (cairo_xlib_surface_create),
	(cairo_xlib_surface_create_for_bitmap),
	(cairo_xlib_surface_create_with_xrender_format):
	* src/cairo-xlib-xrender.h:
	* src/cairo-xlib.h:
	* test/cairo-test.c: (create_xlib_surface):

	Add Screen* arguments to:
	
		cairo_xlib_surface_create_with_xrender_format
		cairo_xlib_surface_create_for_bitmap
		
	Required to correctly identify when two Xlib surfaces are
	compatible with Core and Render rendering requests.

	cairo_xlib_surface_create can determine the screen given
	the required Visual *

2005-07-20  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Move all API changes from 1.0 to 0.6. Other 1.0 API
	issues are strictly additions.

2005-07-18  Carl Worth  <cworth@cworth.org>

	* test/.valgrind-suppressions: Add valgrind suppressions for
	libpng/libz use of uninitialized data. There are clearly bugs here
	that are not cairo's fault as zeroing the buffer before writing
	the png image actually causes more errors(!). And, notably,
	setting all the data to random bytes usually makes the errors go
	away.
	
	* test/Makefile.am: Change the check-valgrind target to include
	the .valgrind-suppresions file and to tee output into
	valgrind.log.

2005-07-18  Carl Worth  <cworth@cworth.org>
